The prime factors (p and q) of the modulus of a RSA private key can be
retreived using the rsa-key-prime-p and rsa-key-prime-q functions.

Added the Secp256k1, Secp256r1 (a.k.a. NIST P-256), Secp384r1 (a.k.a. NIST
P-384) and Secp521r1 (a.k.a. NIST P-521) elliptic curves.

Added the generate-signature-nonce method that can be redefined to get
deterministic signature nonces instead of random ones.

* Version 0.50, released 2020-07-01

** bug fixes

Fixed default OS PRNG getting stuck in dumped images.

Fixes/workarounds for CCL on ARM32.

** improvements

Open only one stream to /dev/urandom for OS PRNGs on unix-like systems even if
there are many OS PRNGs instantiated.

* Version 0.49, released 2020-04-14

** bug fixes

Fixed possible file descriptor leak with OS PRNGs.

Fixed compilation with recent SBCL on Windows.

** new features

Public and private key types are now exported, so that users can use them to
specialize their generic functions.

* Version 0.48, released 2020-01-20

** bug fixes

Fixed compiling with the ':invert' readtable-case.

** new features

Added the '*number-of-miller-rabin-tests*' parameter allowing to configure the
number of rounds of Miller-Rabin to do in the 'prime-p' function.

** improvements

Some improvements of assembly functions for CCL and ECL.

Improved the probable primality test by adding a Lucas test after the
Miller-Rabin tests.

* Version 0.47, released 2019-09-11

** bug fixes

Allow running in ECL even if there is no C compiler available.

** new features

Added the HMAC-KDF key derivation function.

* Version 0.46, released 2019-06-04

** bug fixes

Allow the 'digest' parameter of the 'make-kdf' function to be a keyword.

** new features

Added the Argon2d key derivation function (without parallelism).

* Version 0.45, released 2019-02-18

** bug fixes

Pseudo-random number generation is now thread safe, but only when the threads
are created with the bordeaux-threads library.

** new features
